--- a/.github/workflows/refresh_dashboard.yml
+++ b/.github/workflows/refresh_dashboard.yml
@@ -28,7 +28,7 @@ jobs:
           git fetch upstream master
           git rebase upstream/master
           ./gradlew run
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git commit --allow-empty -m "refresh dash board in README.md" -a
       - name: Push changes
